# VulkanApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  GENERATE_SLN.bat  README.md  build.sh  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/shaders/: shader.slang
